# enchant_calc

./: Cargo.toml  README.md  index.html  worker.mjs
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
enchant_calc/: Cargo.toml
enchant_calc/src/: lib.rs  registry.rs  solver.rs
enchant_calc_gui/: Cargo.toml  index.html
enchant_calc_gui/src/: app.rs  background_work.rs  images.rs  lib.rs  main.rs  step_ext.rs
enchant_calc_gui/src/calculator/: error.rs  mod.rs
pkg/: enchant_calc_gui.js  enchant_calc_gui_bg.wasm  package.json
