[package]
name = "enchant_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
parking_lot.workspace = true
serde.workspace = true
rayon = "1.6.1"
serde_json = "1.0.93"
