[package]
name = "enchant_calc_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
enchant_calc.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
serde.workspace = true

egui = "0.21.0"
eframe = { version = "0.21.3", default-features = false, features = [ "accesskit", "default_fonts", "glow"] }
egui_extras = { version = "0.21.0", features = ["image"] }
itertools = "0.10.5"
image = "0.24.5"
bincode = "1.3.3"
wasm-timer = "0.2.5"
tracing = "0.1.37"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
web-sys = {version = "0.3.61", features = ["Worker", "Event", "DedicatedWorkerGlobalScope", "WorkerOptions", "WorkerType", "MessageEvent", "Performance"] }
bincode = "1.3.3"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false
